# octogit

./: .gitignore  Cargo.toml  README.md  release-notes.txt
.github/workflows/: ci.yml
src/: args.rs  colorizer.rs  constructor.rs  git.rs  main.rs  parser.rs
src/colorizer/: colors.rs  default_colors.rs  glyphs.rs
src/constructor/: colorizer.rs  glyphizer.rs  removizer.rs
src/constructor/colorizer/: default.rs
src/constructor/glyphizer/: default.rs
