[package]
name = "octogit"
version = "2.0.2"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "A simple executable git status for your shell prompt."
readme = "README.md"
homepage = "https://github.com/Axlefublr/octogit"
repository = "https://github.com/Axlefublr/octogit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
hex = "0.4.3"
